--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Table</title>
 </head>
 <body>
- <a href="html-homework2/form.html">Form</a>
+ <a href="form.html">Form</a>
+   
    <table border="1"> 
     <tr>
         <td colspan="2" rowspan="2"></td> <td colspan="2" rowspan="4"></td><td colspan="3" rowspan="8"></td> <td>1</td>
