--- a/form.html
+++ b/form.html
@@ -12,8 +12,8 @@
          <br>
          <label>Sex:
              <select name="sex" required>
-                 <option value="Male">Male</option>
-                 <option value="Female">Female</option>
+                 <option>Male</option>
+                 <option>Female</option>
              </select>
          </label>
          <br>
@@ -41,16 +41,16 @@
              </datalist>
          </label>
          <br>
-         <label required>What is your attitude towards Donald Trump?<br>
+         <label>What is your attitude towards Donald Trump?<br>
              <input type="radio" name="attitude" value="Negative" checked> Negative<br>
              <input type="radio" name="attitude" value="Positive"> Positive<br>
          </label>
           <br>
-         <label required>What Trump's recent actions do you consider to have the most negative impact on the US?<br>
+         <label>What Trump's recent actions do you consider to have the most negative impact on the US?<br>
             <textarea name="Negative action" rows="10" cols="30"> </textarea>
          </label>
           <br>
-         <label required>What Trump's recent actions do you consider to have the most positive impact on the US?<br>
+         <label>What Trump's recent actions do you consider to have the most positive impact on the US?<br>
             <textarea name="Positive action" rows="10" cols="30"> </textarea>
          </label>
          <br>
